day-4 some part done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav>
       <div class="logo">
-        <a href="#">Sasta Bazar</a>
+        <a href="./index.html">Sasta Bazar</a>
       </div>
       <div class="search-box">
         <i class="fas fa-search"></i>
@@ -116,7 +116,7 @@
     <div class="drowpdown-content-parent">
       <div class="categories-dropdown-content">
         <div class="first"><a href="#">Sarees</a></div>
-        <div><a href="#">Sarees</a></div>
+        <div><a href="./sareePage.html">Sarees</a></div>
         <div><a href="#">All Sarees</a></div>
         <div><a href="#">Cotton Sarees</a></div>
         <div><a href="#">Chiffon Sarees</a></div>
@@ -322,6 +322,114 @@
       <button class="pagination_btn" data-id="4">4</button>
       <button class="pagination_btn" data-id="5">5</button>
       <button class="pagination_btn" data-id="6">6</button>
+    </div>
+
+    <!-- footer section is here -->
+    <div class="footer-parent">
+      <div class="non-stop">
+        <div><h1>Shop Non-Stop on Meesho</h1></div>
+        <div>
+          <p>
+            Trusted by more than 1 Crore Indians Cash on Delivery | Free
+            Delivery
+          </p>
+        </div>
+        <div class="apps-container">
+          <div>
+            <img
+              src="https://images.meesho.com/images/pow/playstore-icon-big.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              src="https://images.meesho.com/images/pow/appstore-icon-big.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- second main -->
+      <div class="careers-legal-socialmedia">
+        <div>
+          <div>
+            <div>
+              <h3><a href="#">Careers</a></h3>
+            </div>
+            <div>
+              <h3><a href="#">Become a supplier</a></h3>
+            </div>
+            <div>
+              <h3><a href="#">Hall of Fame</a></h3>
+            </div>
+          </div>
+          <div>
+            <div>
+              <h3><a href="#">Legal and Policies</a></h3>
+            </div>
+            <div>
+              <h3><a href="#">Meesho Tech Blog</a></h3>
+            </div>
+            <div>
+              <h3><a href="#">Notices and Returns</a></h3>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <div>Reach out to us</div>
+          <div class="social-media-handels">
+            <div>
+              <a href="#"
+                ><img
+                  src="https://images.meesho.com/images/pow/facebook.png"
+                  alt=""
+              /></a>
+            </div>
+            <div>
+              <a href="#"
+                ><img
+                  src="https://images.meesho.com/images/pow/instagram.png"
+                  alt=""
+              /></a>
+            </div>
+            <div>
+              <a href="#"
+                ><img
+                  src="https://images.meesho.com/images/pow/youtube.png"
+                  alt=""
+              /></a>
+            </div>
+            <div>
+              <a href="#"
+                ><img
+                  src="https://images.meesho.com/images/pow/linkedin.png"
+                  alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- third main -->
+      <div class="contact-us">
+        <p>Fashnear Technologies</p>
+        <p>Private Limited,</p>
+        <p>CIN:</p>
+        <p>U74900KA2015PTC082263</p>
+        <p>06-105-B, 06-102,</p>
+        <p>(138 Wu) Vaishnavi Signature,</p>
+        <p>No. 78/9,</p>
+        <p>Outer Ring Road,</p>
+        <p>Bellandur, Varthur Hobli,</p>
+        <p>Bengaluru-560103,</p>
+        <p>Karnataka, India</p>
+        <p>E-mail address:</p>
+        <p>query@meesho.com</p>
+        <p>© 2015-2022</p>
+        <p>Meesho</p>
+      </div>
     </div>
   </body>
   <script src="./scripts/index.js"></script>
