--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <a href="#"
+        <a href="./index.html"
           ><img
             src="https://is1-ssl.mzstatic.com/image/thumb/Purple125/v4/89/07/75/89077571-75f4-c262-4225-46c78bbfd988/source/512x512bb.jpg"
             alt=""
@@ -60,12 +60,12 @@
         <div class="price-details">
           <div>
             <div>Total Product Price :</div>
-            <div>Rs. <span id="product_price">1250</span></div>
+            <div>Rs. <span id="product_price">0</span></div>
           </div>
 
           <div>
             <div>Order Total :</div>
-            <div>Rs. <span id="total_net_price">1250</span></div>
+            <div>Rs. <span id="total_net_price">0</span></div>
           </div>
 
           <div>
