--- a/Frontend/sareePage.html
+++ b/Frontend/sareePage.html
@@ -44,7 +44,7 @@
           </div>
           <div class="user-profile">
             <i class="fas fa-user"></i>
-            <span>John Doe</span>
+            <span id="name-shower">John Doe</span>
           </div>
 
           <div class="cart">
