--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -21,19 +21,15 @@
           <ul class="checkout-progress">
             <li class="active">
               <div class="progress-number one">1</div>
-              <!-- <div class="progress-label">Cart</div> -->
             </li>
             <li>
               <div class="progress-number second" id="second">2</div>
-              <!-- <div class="progress-label">Payment Method</div> -->
             </li>
             <li>
               <div class="progress-number">3</div>
-              <!-- <div class="progress-label">Review Order</div> -->
             </li>
             <li>
               <div class="progress-number">4</div>
-              <!-- <div class="progress-label">Confirmation</div> -->
             </li>
           </ul>
         </div>
@@ -44,7 +40,7 @@
           <div id="cart">Cart</div>
           <div id="order">Address</div>
           <div review>Payment</div>
-          <div payment>Summary</div>
+          <div payment>Review</div>
         </div>
       </div>
       <div></div>
