--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="cart">
-        <a href="./cart.html">
+        <a href="#">
           <i class="fas fa-shopping-cart"></i>
           <span id="cart_total_quanity_updater"></span>
         </a>
